# make_renpy_script_from_json

./: .gitignore  CONTRIBUTING.md  README.md  generate.bat  generate.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml
changelog/unreleased/: fix-hotspot-button-signature.md  remove-fail-on-warning.md
dialoggen/: __init__.py
docs/: renpy_dialog_system_spec.md  renpy_scene_editor_spec.md
examples/: dialog_basic.json  dialog_branching.json
json_templates/: README.md
scenegen/: __init__.py  cli.py  generator.py  validator.py
scripts/: run.py
src/dialoggen/: __init__.py  cli.py  expr.py  generator.py  models.py  validator.py
src/make_renpy_script/: __init__.py  __main__.py  cli.py  converter.py  generators.py
tests/: conftest.py  test_cli_detection.py  test_converter.py  test_dialoggen.py  test_dialoggen_cli.py  test_dialoggen_generator.py  test_dialoggen_validator.py  test_scenegen.py
