[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "make-renpy-script"
version = "0.1.0"
description = "Convert JSON dialogue descriptions to Ren'Py scripts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Derdin" }]

[project.scripts]
make-renpy = "make_renpy_script.__main__:main"
